Use release jdk 17 for osx-aarch64